log/build_2025-03-07_04-45-51/wheels/stderr.log
  File "/home/ubuntu/ros2_ws/src/install/wheels/lib/python3.10/site-packages/wheels/wheel_control.py", line 105
    
    ^
SyntaxError: expected 'except' or 'finally' block

